# M2A

./: .gitignore  LICENSE  README.md  config.toml  eval_wrapper.py  pyproject.toml
agent/: config.py  m2a.py  pyproject.toml
agent/agents/: __init__.py  chat_agent.py  memory_manager.py
agent/embeddings/: __init__.py  multimodal.py  text.py
agent/stores/: __init__.py  image_manager.py  raw.py  semantic.py
agent/utils/: message.py
data/: yollava_generate_and_merge.py
eval/: evaluator.py  llm_judge.py
