[project]
name = "m2a_agent"
version = "0.1.0"
description = "M2A Agent."
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "langfuse>=3.12.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pymilvus[milvus-lite]>=2.6.6",
    "scikit-learn>=1.8.0",
]
